04-applications/dev-guide-hugo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-guide
  labels:
    app: dev-guide
